--- a/notebooks/tamu_srcc.ipynb
+++ b/notebooks/tamu_srcc.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aea5c349",
+   "id": "a51e1f8a",
    "metadata": {},
    "source": [
-    "## "
+    "# Read and clean data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5fc954f4",
+   "id": "8499cc7a",
    "metadata": {},
    "source": [
     "### Import modules"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "070a0838",
+   "id": "17869812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,29 +28,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d70513",
+   "id": "076211bc",
    "metadata": {},
    "source": [
     "### Read in .csv into Pandas DataFrame\n",
     "- Data: Texas A&M Univ Southern Regional Climate Center's [Climate Data Portal](https://www.srcc.tamu.edu/climate_data_portal/?product=annual_summaries)\n",
-    "- Station: BNA\n",
+    "- Station: Nashville Intl Airport (BNA)\n",
     "- Daily Lister from 01/01/1988 to 11/30/2021"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "392189b5",
+   "execution_count": 48,
+   "id": "8d307693",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Skip first 7 rows which has descriptive info regarding the dataset\n",
     "daily_df = pd.read_csv('../data/tamu_daily_lister_stn_13897.csv', skiprows=6)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "45569dc5",
+   "id": "bc83a1d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4f02a281",
+   "id": "64dc5dfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07cb7459",
+   "id": "f9f9de6a",
    "metadata": {},
    "source": [
     "### Prepare DataFrame for EDA"
@@ -78,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "12049b84",
+   "id": "0a437eb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d4f5c4a4",
+   "id": "b8e25fca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "76ace90a",
+   "id": "3a6b5976",
    "metadata": {},
    "outputs": [],
    "source": [
