refactored read & clean notebook

--- a/notebooks/tamu_srcc.ipynb
+++ b/notebooks/tamu_srcc.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "17869812",
    "metadata": {},
    "outputs": [],
@@ -39,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "8d307693",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Skip first 7 rows which has descriptive info regarding the dataset\n",
-    "daily_df = pd.read_csv('../data/tamu_daily_lister_stn_13897.csv', skiprows=6)"
+    "daily_df = pd.read_csv('../data/tamu_srcc_daily_lister_stn_13897.csv', skiprows=6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "bc83a1d6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "64dc5dfb",
    "metadata": {},
    "outputs": [],
@@ -78,40 +78,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "0a437eb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#daily_df.pcpn.value_counts()\n",
-    "#daily_df.snow.value_counts()\n",
-    "#daily_df.snwd.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "b8e25fca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take pcpn, snow, and snwd columns, convert to numeric, convert errors to null, and only return notnull values.\n",
-    "pcpn_df = daily_df[pd.to_numeric(daily_df['pcpn'], errors='coerce').notnull()]\n",
-    "snow_df = daily_df[pd.to_numeric(daily_df['snow'], errors='coerce').notnull()]\n",
-    "snwd_df = daily_df[pd.to_numeric(daily_df['snwd'], errors='coerce').notnull()]"
+    "# Take pcpn, snow, and snwd columns, convert to numeric, convert errors to null, and verify conversion.\n",
+    "daily_df['pcpn'] = pd.to_numeric(daily_df['pcpn'], errors='coerce')\n",
+    "assert daily_df.pcpn.dtypes == 'float64'\n",
+    "\n",
+    "daily_df['snow'] = pd.to_numeric(daily_df['snow'], errors='coerce')\n",
+    "assert daily_df.snow.dtypes == 'float64'\n",
+    "\n",
+    "daily_df['snwd'] = pd.to_numeric(daily_df['snwd'], errors='coerce')\n",
+    "assert daily_df.snwd.dtypes == 'float64'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "3a6b5976",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to .csv\n",
-    "pcpn_df.to_csv('../data/tamu_pcpn.csv', index = False)\n",
-    "snow_df.to_csv('../data/tamu_snow.csv', index = False)\n",
-    "snwd_df.to_csv('../data/tamu_snwd.csv', index = False)"
+    "daily_df.to_csv('../data/clean.csv', index = False)"
    ]
   }
  ],
