trying a larger dataset

--- a/notebooks/tamu_srcc.ipynb
+++ b/notebooks/tamu_srcc.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Skip first 7 rows which has descriptive info regarding the dataset\n",
-    "daily_df = pd.read_csv('../data/tamu_srcc_daily_lister_stn_13897.csv', skiprows=6)"
+    "daily_df = pd.read_csv('../data/tamu_srcc_daily_lister_stn_13897_61.csv', skiprows=6)"
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b8e25fca",
    "metadata": {},
    "outputs": [],
@@ -90,19 +90,19 @@
     "daily_df['snow'] = pd.to_numeric(daily_df['snow'], errors='coerce')\n",
     "assert daily_df.snow.dtypes == 'float64'\n",
     "\n",
-    "daily_df['snwd'] = pd.to_numeric(daily_df['snwd'], errors='coerce')\n",
-    "assert daily_df.snwd.dtypes == 'float64'"
+    "#daily_df['snwd'] = pd.to_numeric(daily_df['snwd'], errors='coerce')\n",
+    "#assert daily_df.snwd.dtypes == 'float64'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3a6b5976",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to .csv\n",
-    "daily_df.to_csv('../data/clean.csv', index = False)"
+    "daily_df.to_csv('../data/clean_61.csv', index = False)"
    ]
   }
  ],
